# ai-agents-mcp-tools

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-cli.yml
app/: main.py
app/agents/: __init__.py  backend_agent.py  base.py  design_agent.py  frontend_agent.py  go_agent.py  nextjs_agent.py  orchestrator.py  vercel_agent.py
app/api/: main.py
app/architecture/: workflow_coordinator.py
app/architecture/agents/: __init__.py  base.py  business_objective_parser.py  decision_engine.py  solution_flow_diagram.py  validation_agent.py
app/cli/: client.py  commands.py  install.sh  project_scanner.py
app/llm/: __init__.py  base.py  dual_extractor.py  huggingface.py
app/mcp/: architecture_mcp.py  backend_mcp.py  frontend_mcp.py  orchestrator_mcp.py
app/skills/: __init__.py  base.py  registry.py
src/agents/: backend_agent.py  base.py  design_agent.py  frontend_agent.py  nextjs_agent.py  orchestrator.py  vercel_agent.py
src/api/: main.py
src/architecture/: __init__.py  workflow_coordinator.py
src/llm/: __init__.py  bm25_index.py  huggingface.py  prompts.py
src/mcp/: __init__.py  architecture_mcp.py  backend_mcp.py  frontend_mcp.py  orchestrator_mcp.py
src/skills/: __init__.py  base.py  registry.py
tests/: test_bm25_index.py
tests/agents/: test_go_agent.py
tests/architecture/: test_business_objective_parser.py  test_decision_engine.py  test_solution_flow_diagram.py  test_validation_agent.py
tests/mcp/: test_architecture_mcp.py  test_backend_mcp.py  test_orchestrator_mcp.py
(+117 files in other folders)
